# cursor-adapter-windows

./: CHANGELOG.md  README.md  pyproject.toml  requirements.txt  run_ollama_mock.ps1  run_server.ps1
scripts/: test_ollama_mock.py  test_openai_chat.py
src/cursor_adapter/: cli.py
src/cursor_adapter/adapters/: __init__.py  cursor_adapter.py  cursor_window_client.py
src/cursor_adapter/server/: app.py  ollama_mock.py
src/cursor_adapter/utils/: io.py
