[project]
name = "cursor-adapter-windows"
version = "0.2.0"
description = "Windows Cursor desktop automation: OpenAI API (17325) + Ollama mock for OpenClaw (11435)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
  "pywinauto>=0.6.8",
  "pywin32>=306",
  "pyperclip>=1.9.0",
  "pillow>=10.0.0",
]

[project.scripts]
cursor-adapter = "cursor_adapter.server.app:main"
cursor-adapter-openai = "cursor_adapter.server.app:main"
cursor-adapter-ollama-mock = "cursor_adapter.server.ollama_mock:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
